--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="theme-color" content="orange">
+   <meta property="og:title" content="AARR Polygon GIF maker">
+   <meta property="og:description" content="">
+   <meta property="og:site_name" content="AARR">
+   <meta property="og:image" content="https://i.imgur.com/Sj5QNyP.png">
+   <link rel="icon" type="image/png" href="https://i.imgur.com/Sj5QNyP.png">
+   <link rel="stylesheet" href="style.css">
+  
 <title>AARR polygon shock gif generator</title>
 <script src="gif.js"></script>
 <style>
