--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 
 <h2>AARR polygon shock gif generator β</h2>
 <form id="gifForm">
-  <label>1フレーム目画像をアップロード (png形式のみ)：</label>
+  <label>1フレーム目画像をアップロード：</label>
+  <br>
+  (⚠️元画像のサイズが大きいと時間がかかります)
+  <br>
   <input type="file" id="upload" accept="image/*" required>
 
   <label>中央に表示するメインテキスト (最大30文字)：</label>
